# rnd-router

./: .dockerignore  .env.example  .gitignore  README.md  compose.yaml  pyproject.toml  requirements.txt
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/src/api/: app.py
backend/src/domain/: __init__.py  models.py
backend/src/infrastructure/: __init__.py  index_builder.py  json_response.py  profile_parser.py  profile_repository.py  prompts.py  retrieval.py  yandex_llm.py
backend/src/legacy/: build_index.py  llm.py  models.py  parse_profiles.py  rerank.py  retrieve.py
backend/src/services/: __init__.py  decomposition.py  describe.py  email_drafting.py  ports.py  reranking.py  router.py
backend/tests/: test_api.py  test_models.py  test_profile_parser.py  test_prompts.py  test_retrieval.py  test_router.py
backend/tests/fixtures/: profiles.json
data/: README.md
docs/: foundation.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/legacy-streamlit/.streamlit/: config.toml
frontend/legacy-streamlit/src/: app.py  mocks.py
frontend/public/pencil/: RND1.html  RND2.html  RND3.html  RND4.html  RND5.html
frontend/src/: App.tsx  api.ts  initialRequests.ts  styles.css  types.ts
frontend/src/components/: DecompositionStage.tsx  EmailDraftStage.tsx  EmailPreparationStage.tsx  ProgressHeader.tsx  RequestEditor.tsx  RequestList.tsx  ResultsStage.tsx  Sidebar.tsx
prompts/: decompose_v1.md  decompose_v2.md  describe_v1.md  draft_email_v1.md  draft_email_v2.md  rerank_v1.md  rerank_v2.md  rerank_v3.md  rerank_v4.md  rerank_v5.md
src/: decompose.py  draft_email.py  models.py  parse_profiles.py  prompt.py
src/web-ui/: readme.md  task.md
src/web-ui/src/: front_utils.py
