[project]
name = "rnd-router"
version = "0.1.0"
description = "AI‑powered router that transforms an incoming R&D request into a precise, personalised invitation to the right researcher."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=25.1.0",
    "annotated-types>=0.7.0",
    "anyio>=4.14.1",
    "certifi>=2026.6.17",
    "cffi>=2.1.0",
    "charset-normalizer>=3.4.9",
    "click>=8.4.2",
    "colorama>=0.4.6",
    "cryptography>=49.0.0",
    "deprecated>=1.3.1",
    "distro>=1.9.0",
    "get-annotations>=0.1.2",
    "googleapis-common-protos>=1.75.0",
    "grpcio>=1.82.1",
    "grpcio-tools>=1.81.1",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.3",
    "idna>=3.18",
    "jiter>=0.16.0",
    "openai>=2.45.0",
    "packaging>=26.2",
    "protobuf>=6.33.6",
    "pycparser>=3.0",
    "pydantic>=2.13.4",
    "pydantic-core>=2.46.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "setuptools>=83.0.0",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "tenacity>=9.1.4",
    "tqdm>=4.68.4",
    "typing-extensions>=4.16.0",
    "typing-inspection>=0.4.2",
    "urllib3>=2.7.0",
    "wrapt>=2.2.2",
    "yandex-ai-studio-sdk>=0.22.0",
    "yandexcloud>=0.398.0",
]
