[project]
name = "rnd-router"
version = "0.1.0"
description = "R&D researcher matching and invitation drafting service."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.139.0",
    "numpy>=2.2.6",
    "pyarrow>=25.0.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.1",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.51.0",
    "yandex-ai-studio-sdk>=0.22.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend/src"]
addopts = "-q"
